# DeepPython

./: pyproject.toml  requirements.txt
hw_1/: task_1_3.py  test_file_1.1.txt  test_file_1.3.txt
hw_1/task_1/: task.py
hw_1/task_2/: task.py
hw_2/task_1/: example_table.tex  main.py  task.py
hw_3/task_1/: task.py
hw_3/task_2/: task.py
hw_3/task_3/: A.txt  B.txt  C.txt  CD.txt  hash.txt  task.py
hw_4/task_1/: performance_results.txt  task.py
hw_4/task_2/: comparison.txt  task.py
hw_4/task_3/: interaction_log.txt  task.py
hw_5/task_1/: task.py
hw_5/task_2/: avito_listings.json  task.py
