[project]
name = "DeepPython"
version = "0.1.0"
description = "Домашние задания из курса 'Углубленный Python'"
authors = [
    {name = "Evgenii"},
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.19.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiohttp_socks==0.10.1",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "frozenlist==1.5.0",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.4.3",
    "numpy==2.2.4",
    "propcache==0.3.1",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "python-socks==2.7.1",
    "schedule==1.2.2",
    "soupsieve==2.6",
    "typing_extensions==4.13.2",
    "yarl==1.19.0"
]

[project.urls]
Repository = "https://github.com/Evgeninio/DeepPython"
